--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "voku/simple_html_dom",
+  "name": "ourwin-network/simple_html_dom",
   "description": "Simple HTML DOM package.",
   "keywords": [
     "dom",
